--- a/index.html
+++ b/index.html
@@ -1590,7 +1590,7 @@
                             <a href="#"><i class="fa-regular fa-heart"></i></a>
                         </div>
                         <div class="flashSell_content px-4">
-                            <p class="text-muted">By.Agora Agroo ltd</p>
+                            <p class="text-muted mt-4">By.Agora Agroo ltd</p>
                             <h2>Agora Food Box</h2>
                             <h6 class="featured_icon text-warning">
                                 <i class="fas fa-star "></i>
@@ -1628,7 +1628,7 @@
                             <a href="#"><i class="fa-regular fa-heart"></i></a>
                         </div>
                         <div class="flashSell_content px-4">
-                            <p class="text-muted">By.Agora Agroo ltd</p>
+                            <p class="text-muted mt-4">By.Agora Agroo ltd</p>
                             <h2>Agora Food Box</h2>
                             <h6 class="featured_icon text-warning">
                                 <i class="fas fa-star "></i>
@@ -1667,7 +1667,7 @@
                             <a href="#"><i class="fa-regular fa-heart"></i></a>
                         </div>
                         <div class="flashSell_content px-4">
-                            <p class="text-muted">By.Agora Agroo ltd</p>
+                            <p class="text-muted mt-4">By.Agora Agroo ltd</p>
                             <h2>Agora Food Box</h2>
                             <h6 class="featured_icon text-warning">
                                 <i class="fas fa-star "></i>
@@ -1706,7 +1706,7 @@
                             <a href="#"><i class="fa-regular fa-heart"></i></a>
                         </div>
                         <div class="flashSell_content px-4">
-                            <p class="text-muted">By.Agora Agroo ltd</p>
+                            <p class="text-muted mt-4">By.Agora Agroo ltd</p>
                             <h2>Agora Food Box</h2>
                             <h6 class="featured_icon text-warning">
                                 <i class="fas fa-star "></i>
@@ -1744,7 +1744,7 @@
                             <a href="#"><i class="fa-regular fa-heart"></i></a>
                         </div>
                         <div class="flashSell_content px-4">
-                            <p class="text-muted">By.Agora Agroo ltd</p>
+                            <p class="text-muted mt-4">By.Agora Agroo ltd</p>
                             <h2>Agora Food Box</h2>
                             <h6 class="featured_icon text-warning">
                                 <i class="fas fa-star "></i>
@@ -1782,7 +1782,7 @@
                             <a href="#"><i class="fa-regular fa-heart"></i></a>
                         </div>
                         <div class="flashSell_content px-4">
-                            <p class="text-muted">By.Agora Agroo ltd</p>
+                            <p class="text-muted mt-4">By.Agora Agroo ltd</p>
                             <h2>Agora Food Box</h2>
                             <h6 class="featured_icon text-warning">
                                 <i class="fas fa-star "></i>
