--- a/index.html
+++ b/index.html
@@ -1046,8 +1046,8 @@
                                     <a href="#"><i class="fa-regular fa-heart"></i></a>
                                 </div>
                                 <div class="featured_content">
-                                  <p class="text-muted mt-4">By.Agora Agroo ltd</p>
-                                  <h2>Agora Food Box</h2>
+                                  <p class="text-muted mt-4">By.Organic Fruits Ltd</p>
+                                  <h2>Organic Strawberry</h2>
                                   <h6 class="featured_icon text-warning">
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
@@ -1083,8 +1083,8 @@
                                     <a href="#"><i class="fa-regular fa-heart"></i></a>
                                 </div>
                                 <div class="featured_content">
-                                  <p class="text-muted mt-4">By.Agora Agroo ltd</p>
-                                  <h2>Agora Food Box</h2>
+                                  <p class="text-muted mt-4">By.Organic Fruits Ltd</p>
+                                  <h2>Organic Some Fruits</h2>
                                   <h6 class="featured_icon text-warning">
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
@@ -1120,8 +1120,8 @@
                                     <a href="#"><i class="fa-regular fa-heart"></i></a>
                                 </div>
                                 <div class="featured_content">
-                                  <p class="text-muted mt-4">By.Agora Agroo ltd</p>
-                                  <h2>Agora Food Box</h2>
+                                  <p class="text-muted mt-4">By.Organic Fruits Ltd</p>
+                                  <h2>Fresh Banana</h2>
                                   <h6 class="featured_icon text-warning">
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
@@ -1150,15 +1150,15 @@
                                 </div>
                                 <div class="featured_img">
                                   <img src="assets/img/home-1/f4.png" alt="" srcset="" />
-                                </div>
+                                </div> 
                                 <div class="featured_cartIcon">
                                     <a href="#"><i class="fa-regular fa-eye"></i></a>
                                     <a href="#"><i class="fa-solid fa-arrow-right-arrow-left"></i></a>
                                     <a href="#"><i class="fa-regular fa-heart"></i></a>
                                 </div>
                                 <div class="featured_content">
-                                  <p class="text-muted mt-4">By.Agora Agroo ltd</p>
-                                  <h2>Agora Food Box</h2>
+                                  <p class="text-muted mt-4">By.Organic Fruits Ltd</p>
+                                  <h2>Fresh Food Box</h2>
                                   <h6 class="featured_icon text-warning">
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
@@ -1243,9 +1243,9 @@
                                             <a href="#"><i class="fa-solid fa-arrow-right-arrow-left"></i></a>
                                             <a href="#"><i class="fa-regular fa-heart"></i></a>
                                         </div>
-                                        <div class="planLine mt-2 mb-4"></div>
+                                        <!-- <div class="planLine mt-2 mb-4"></div> -->
                                         <div class="featured_content">
-                                            <p class="text-muted">By.Agora Agroo ltd</p>
+                                            <p class="text-muted mt-3">By.Agora Agroo ltd</p>
                                             <h2>Agora Food Box</h2>
                                             <h6 class="featured_icon text-warning">
                                                 <i class="fas fa-star "></i>
@@ -1279,9 +1279,8 @@
                                             <a href="#"><i class="fa-solid fa-arrow-right-arrow-left"></i></a>
                                             <a href="#"><i class="fa-regular fa-heart"></i></a>
                                         </div>
-                                        <div class="planLine mt-2 mb-4"></div>
                                         <div class="featured_content">
-                                            <p class="text-muted">By.Agora Agroo ltd</p>
+                                            <p class="text-muted mt-3">By.Agora Agroo ltd</p>
                                             <h2>Agora Food Box</h2>
                                             <h6 class="featured_icon text-warning">
                                                 <i class="fas fa-star "></i>
@@ -1315,9 +1314,8 @@
                                             <a href="#"><i class="fa-solid fa-arrow-right-arrow-left"></i></a>
                                             <a href="#"><i class="fa-regular fa-heart"></i></a>
                                         </div>
-                                        <div class="planLine mt-2 mb-4"></div>
                                         <div class="featured_content">
-                                            <p class="text-muted">By.Agora Agroo ltd</p>
+                                            <p class="text-muted mt-3">By.Agora Agroo ltd</p>
                                             <h2>Agora Food Box</h2>
                                             <h6 class="featured_icon text-warning">
                                                 <i class="fas fa-star "></i>
@@ -1351,9 +1349,8 @@
                                             <a href="#"><i class="fa-solid fa-arrow-right-arrow-left"></i></a>
                                             <a href="#"><i class="fa-regular fa-heart"></i></a>
                                         </div>
-                                        <div class="planLine mt-2 mb-4"></div>
                                         <div class="featured_content">
-                                            <p class="text-muted">By.Agora Agroo ltd</p>
+                                            <p class="text-muted mt-3">By.Agora Agroo ltd</p>
                                             <h2>Agora Food Box</h2>
                                             <h6 class="featured_icon text-warning">
                                                 <i class="fas fa-star "></i>
@@ -1387,9 +1384,8 @@
                                             <a href="#"><i class="fa-solid fa-arrow-right-arrow-left"></i></a>
                                             <a href="#"><i class="fa-regular fa-heart"></i></a>
                                         </div>
-                                        <div class="planLine mt-2 mb-4"></div>
                                         <div class="featured_content">
-                                            <p class="text-muted">By.Agora Agroo ltd</p>
+                                            <p class="text-muted mt-3">By.Agora Agroo ltd</p>
                                             <h2>Agora Food Box</h2>
                                             <h6 class="featured_icon text-warning">
                                                 <i class="fas fa-star "></i>
@@ -1423,9 +1419,8 @@
                                             <a href="#"><i class="fa-solid fa-arrow-right-arrow-left"></i></a>
                                             <a href="#"><i class="fa-regular fa-heart"></i></a>
                                         </div>
-                                        <div class="planLine mt-2 mb-4"></div>
                                         <div class="featured_content">
-                                            <p class="text-muted">By.Agora Agroo ltd</p>
+                                            <p class="text-muted mt-3">By.Agora Agroo ltd</p>
                                             <h2>Agora Food Box</h2>
                                             <h6 class="featured_icon text-warning">
                                                 <i class="fas fa-star "></i>
@@ -1459,9 +1454,8 @@
                                             <a href="#"><i class="fa-solid fa-arrow-right-arrow-left"></i></a>
                                             <a href="#"><i class="fa-regular fa-heart"></i></a>
                                         </div>
-                                        <div class="planLine mt-2 mb-4"></div>
                                         <div class="featured_content">
-                                            <p class="text-muted">By.Agora Agroo ltd</p>
+                                            <p class="text-muted mt-3">By.Agora Agroo ltd</p>
                                             <h2>Agora Food Box</h2>
                                             <h6 class="featured_icon text-warning">
                                                 <i class="fas fa-star "></i>
@@ -1495,9 +1489,8 @@
                                             <a href="#"><i class="fa-solid fa-arrow-right-arrow-left"></i></a>
                                             <a href="#"><i class="fa-regular fa-heart"></i></a>
                                         </div>
-                                        <div class="planLine mt-2 mb-4"></div>
                                         <div class="featured_content">
-                                            <p class="text-muted">By.Agora Agroo ltd</p>
+                                            <p class="text-muted mt-3">By.Agora Agroo ltd</p>
                                             <h2>Agora Food Box</h2>
                                             <h6 class="featured_icon text-warning">
                                                 <i class="fas fa-star "></i>
@@ -2046,9 +2039,8 @@
                                     <a href="#"><i class="fa-solid fa-arrow-right-arrow-left"></i></a>
                                     <a href="#"><i class="fa-regular fa-heart"></i></a>
                                 </div>
-                                <div class="planLine mt-2 mb-4"></div>
                                 <div class="featured_content">
-                                    <p class="text-muted">By.Agora Agroo ltd</p>
+                                    <p class="text-muted mt-3">By.Agora Agroo ltd</p>
                                     <h2>Agora Food Box</h2>
                                     <h6 class="featured_icon text-warning">
                                         <i class="fas fa-star "></i>
@@ -2082,9 +2074,8 @@
                                     <a href="#"><i class="fa-solid fa-arrow-right-arrow-left"></i></a>
                                     <a href="#"><i class="fa-regular fa-heart"></i></a>
                                 </div>
-                                <div class="planLine mt-2 mb-4"></div>
                                 <div class="featured_content">
-                                    <p class="text-muted">By.Agora Agroo ltd</p>
+                                    <p class="text-muted mt-3">By.Agora Agroo ltd</p>
                                     <h2>Agora Food Box</h2>
                                     <h6 class="featured_icon text-warning">
                                         <i class="fas fa-star "></i>
@@ -2118,9 +2109,8 @@
                                     <a href="#"><i class="fa-solid fa-arrow-right-arrow-left"></i></a>
                                     <a href="#"><i class="fa-regular fa-heart"></i></a>
                                 </div>
-                                <div class="planLine mt-2 mb-4"></div>
                                 <div class="featured_content">
-                                    <p class="text-muted">By.Agora Agroo ltd</p>
+                                    <p class="text-muted mt-3">By.Agora Agroo ltd</p>
                                     <h2>Agora Food Box</h2>
                                     <h6 class="featured_icon text-warning">
                                         <i class="fas fa-star "></i>
@@ -2154,9 +2144,8 @@
                                     <a href="#"><i class="fa-solid fa-arrow-right-arrow-left"></i></a>
                                     <a href="#"><i class="fa-regular fa-heart"></i></a>
                                 </div>
-                                <div class="planLine mt-2 mb-4"></div>
                                 <div class="featured_content">
-                                    <p class="text-muted">By.Agora Agroo ltd</p>
+                                    <p class="text-muted mt-3">By.Agora Agroo ltd</p>
                                     <h2>Agora Food Box</h2>
                                     <h6 class="featured_icon text-warning">
                                         <i class="fas fa-star "></i>
