--- a/product_details.html
+++ b/product_details.html
@@ -556,12 +556,17 @@
 
               <span class="productDetails_review justity-content">
                 <h6 class="details_review">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="far fa-star"></i>
-                </h6>
+                  <input class="review" type="radio" name="review1" id="rating1">
+                  <label for="rating1" class="fas fa-star " ></label>
+                  <input class="review" type="radio" name="review1" id="rating2">
+                  <label for="rating2" class="fas fa-star " ></label>
+                  <input class="review" type="radio" name="review1" id="rating3">
+                  <label for="rating3" class="fas fa-star " ></label>
+                  <input class="review" type="radio" name="review1" id="rating4">
+                  <label for="rating4" class="fas fa-star " ></label>
+                  <input class="review" type="radio" name="review1" id="rating5">
+                  <label for="rating5" class="far fa-star-half-stroke" ></label>
+              </h6>
                 <p class="text-muted">( 10+ Review)</p>
               </span>
               <h4 class="py-2">Masala Potato Chips</h4>
