--- a/index.html
+++ b/index.html
@@ -2465,7 +2465,7 @@
             <div class="row">
               <div class="col-md-4">
                 <div class="footer">
-                  <p>Copyright &copy; 2022 Fresho .All Rights Reserved</p>
+                  <p>Copyright &copy; 2022 Fresho powered by Mizan .All Rights Reserved</p>
                 </div>
               </div>
               <div class="col-md-4">
